2005-01-27  Andrew Cagney  <cagney@gnu.org>

	* configure: Regenerate to track ../gettext.m4 change.

2005-01-27  Jan Beulich  <jbeulich@novell.com>

	* config/tc-ia64.c (emit_one_bundle): Change "?imbf??" to "?ibmfxx".

2005-01-27  Jan Beulich  <jbeulich@novell.com>

	* config/tc-ia64.c (emit_one_bundle): Add late resolution of move
	to/from application registers dynamic insns.
	(md_assemble): Defer resolution of move to/from application registers
	dynamic insns when they can be issued on either the I- or M-units.

2005-01-25  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-frv.c (md_apply_fix3): Mark TLS symbols as such.
	2004-12-10  Alexandre Oliva  <aoliva@redhat.com>
	* config/tc-frv.c (frv_pic_ptr): Add tlsmoff support.
	2004-11-10  Alexandre Oliva  <aoliva@redhat.com>
	* cgen.c (gas_cgen_parse_operand): Handle
	CGEN_PARSE_OPERAND_SYMBOLIC.
	* config/tc-frv.c (md_cgen_lookup_reloc): Handle TLS relocations.
	(frv_force_relocation): Likewise.  Fix handling of PIC
	relocations.
	(md_apply_fix3): Likewise.

2005-01-21  Ben Elliston  <bje@au.ibm.com>

	* as.h: Remove #if 0'd code.
	* atof-generic.c (atof_generic): Likewise.
	* ecoff.c (ecoff_directive_frame): Likewise.
	* frags.h (FRAG_APPEND_1_CHAR): Likewise.
	* itbl-ops.c (itbl_add_reg): Likewise.
	* listing.c (calc_hex): Likewise.
	* read.c (MASK_CHAR): Likewise.
	* subsegs.c (subsegs_print_statistics): Likewise.
	* symbols.c (indent): Likewise.
	* write.c (write_relocs): Likewise.
	(write_object_file): Likewise.
	(relax_frag): Likewise.

2005-01-20  Nick Clifton  <nickc@redhat.com>

	* as.c (std_longopts): Add an entry for "--a" in order to prevent
	getopt_long_only() from considering -a as an abbreviation for
	--alternate.
	(parse_args): Fix the parsing of -a=<file>.

2005-01-20  Alan Modra  <amodra@bigpond.net.au>

	PR gas/684
	* read.c (s_incbin): Adjust default count for skip.  Check validity
	of count and skip rigorously.

2005-01-19  Fred Fish  <fnf@specifixinc.com>
